# 11_Ramniuk_I_A_fpmi_cpp_labs

./: 2025_10_14.cpp  task2025_10_14_rebuild.cpp
semester_1/lab1_introduction/laba1/z1/: z1.cbp  z1.depend
semester_1/lab1_introduction/laba1/z10/: main.cpp  z10.depend
semester_1/lab1_introduction/laba1/z11/: main.cpp  z11.cbp  z11.depend  z11.layout
semester_1/lab1_introduction/laba1/z12/: main.cpp  z12.cbp  (+2 more)
semester_1/lab1_introduction/laba1_cpp_codes/: z1.cpp  z10.cpp  z11.cpp  z12.cpp  z13.cpp  z14.cpp  z2.cpp  z3.cpp  z4.cpp  z5.cpp  z6.cpp  z7.cpp  z8.cpp  z9.cpp  z_hello_world.cpp
semester_1/lab2_integer_arithmetics/.../: z1.cpp  z3.cpp  z4.cpp
semester_1/lab2_integer_arithmetics/laba2/: MY_HOMEWORK_z2.cpp  z5.cpp
semester_1/lab2_integer_arithmetics/laba2/testsLaba/: CMakeLists.txt
semester_1/lab2_integer_arithmetics/laba2/testsLaba/src/: z2.cpp
semester_1/lab2_integer_arithmetics/laba2/testsLaba/tests/: .test_z2.cpp.swp  test_z2.cpp
semester_1/lab3_pointers_and_arrays/: lab3_dynamic.c  lab3_dynamic.cpp  lab3_static.cpp
semester_1/lab4_matrices/: 2025_10_21.cpp  task2  task2.cpp
semester_1/lab5_strings/: task2_code.cpp
semester_1/lab6_files/: input.txt  z1.cpp
semester_1/lab7_class_vector/multiplication/: multiplication.h
semester_1/lab7_class_vector/vector/: vector_impl.cpp  vector_impl.h
semester_1/rgr1_forward_list/forward_list/: forward_list_impl.cpp  forward_list_impl.h
semester_1/rgr2_vector_stl/part1/: main.cpp
semester_1/rgr3_set_list_stl/part1/: main.cpp
semester_1/rgr3_set_list_stl/part2/: library.txt  main.cpp
(+21 files in other folders)
